meta tags added

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <link rel="icon" href="%PUBLIC_URL%/Ludo.png" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Play Ludo online! A classic board game implemented in React JS. Enjoy multiplayer gaming with friends.">
+    <meta name="keywords" content="ludo game, online ludo, React game, multiplayer ludo, board game, family game night">
+    <meta name="author" content="Rohit Jha">
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -12,7 +15,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Ludo Game</title>
+    <title>ReactJS Ludo Game</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
